# CMake-tutorial

./: README.md  comandos.txt
m2l1_Build_Files_Generation_Process/: main.cpp  (+2 more)
m2l2_Build_Files_Generation_Process/: CMakeLists.txt  subtration.cpp
m2l2_Build_Files_Generation_Process/my_build_dir/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Calculadora.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calculadora.vcxproj  calculadora.vcxproj.filters  cmake_install.cmake  my_math.vcxproj  my_math.vcxproj.filters  my_print.vcxproj  my_print.vcxproj.filters
m2l2_Build_Files_Generation_Process/my_build_dir/Debug/: my_math.lib  my_print.lib
m2l2_Build_Files_Generation_Process/my_build_dir/calculadora.dir/Debug/: calculadora.exe.recipe  calculadora.ilk
m2l2_Build_Files_Generation_Process/my_build_dir/calculadora.dir/Debug/calculadora.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
m2l2_Build_Files_Generation_Process/my_build_dir/my_math.dir/Debug/my_math.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
m2l2_Build_Files_Generation_Process/my_build_dir/my_print.dir/Debug/my_print.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
m2l2_Build_Files_Generation_Process/my_build_dir/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
m2l2_Build_Files_Generation_Process/my_build_dir/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+15 files in other folders)
